Added introduction page structure

--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
     <style>
 
     </style>
-    <script src="utilities.js"></script>
     <script>
-        function initialize() {
-
-        }
     </script>
 </head>
-
-<body onload="initialize();">
+	<h1 class = "title"> Welcome to Game of Lambdas </h2>
+	<h2><a href = "play.html">Play</a></h2>
+	<div class = "container">
+	<div class = "about"><b>About</b></br>
+	Game of Lambdas is a project I made during the spring semester of my junior year in highschool (2016). Given much feedback, I have decided to make the project cleaner and fix the bugs. Please enjoy this meme-themed snake game.
+	</div>
+	</div>
+<body>
 </body>
 
 </html>
