--- a/index.html
+++ b/index.html
@@ -5,7 +5,27 @@
 <head>
     <title>Game of Lambdas | About </title>
     <style>
-
+	*
+	{
+		text-align: center;
+	}
+	body
+	{
+		background-color: pink;
+	}
+	.title
+	{
+		color: blue;
+		font: 40pt times new roman;
+	}
+	.about
+	{
+		margin-left: 25%;
+		width: 50%;
+		background-color: #ff99ff;
+		border-radius: 15pt;
+		font: 20pt arial;
+	}
     </style>
     <script>
     </script>
