Clarified Controls and Instructions.

--- a/play.html
+++ b/play.html
@@ -621,8 +621,8 @@
     <h2> <span class = "title">Game of Lambdas</span> </h2>
     <div class="leftColumn">
         <img style="opacity:.3;" class="bg" src="images/cool.png" />
-        <b>Controls:</b> Arrow keys move in their respective directions </br>
-        <b>Instructions:</b> Collect Lambdas, Abstractions, and power ups to get a score. Avoid hitting bugs with your code block. Join the leaderboard! </br><b>Default mode is easy</b></br>
+        <b>Controls:</b> Use the arrow keys on your keyboard to move up, down, left, or right. Remember to not crash into yourself!</br>
+        <b>Instructions:</b> Run into lambda blocks to score points and extend your code! Abstraction blocks make your code shorter. Beware of Bug blocks as they will break your code and give you a game over. Running into recursion blocks will get rid of bug blocks and speed up your code! Earn as many points as you can! Join the leaderboard! </br><b>Default mode is easy</b></br>
         </br>
         <b>Settings</b>
         <hr>
