--- a/play.html
+++ b/play.html
@@ -619,7 +619,7 @@
 </head>
 
 <body onload="initialize();">
-    <img class="bg" src="images/lambdachair.png" />
+    <img class="bg" src="images/gol.png" />
     <h2> <span class = "title">Game of Lambdas</span> </h2>
     <div class="leftColumn">
         <img style="opacity:.3;" class="bg" src="images/cool.png" />
