Finished project changes, no longer working on it.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<h2><a href = "play.html">Play</a></h2>
 	<div class = "container">
 	<div class = "about"><b>About</b></br>
-	Game of Lambdas is a project I made during the spring semester of my junior year in highschool (2016). Given much feedback, I have decided to make the project cleaner and fix the bugs. Please enjoy this meme-themed snake game.
+	Game of Lambdas is a project I made during the spring semester of my junior year in highschool (2016). Given much feedback, I decided to make the project cleaner and fix some of the bugs. Please enjoy this meme-themed snake game.
 	</div>
 	</div>
 <body>
