--- a/play.html
+++ b/play.html
@@ -32,7 +32,6 @@
 			
 			SLOW = 20;
             FAST = 30;
-            SONIC = 40;
             moveSpeed = SLOW;
             playingField.innerHTML = "";
             codeBlockArray = [];
@@ -51,13 +50,10 @@
         }
 
         function setMoveSpeed(difficultyValue) {
-            if (difficultyValue == "easy")
+            if (difficultyValue == "regular")
                 moveSpeed = SLOW;
             else
-            if (difficultyValue == "medium")
                 moveSpeed = FAST;
-            else
-                moveSpeed = SONIC;
         }
 
         function startGame() {
@@ -67,7 +63,7 @@
                 bg.setAttribute("src", "images/bg.png");
                 bg.setAttribute("class", "bg");
                 playingField.appendChild(bg);
-				moveSpeed = 45;
+				moveSpeed = FAST;
             }
             settingsForm.style.display = "none";
             
@@ -606,9 +602,7 @@
             req.onreadystatechange = function() {
                 if (req.readyState == 4) {
 */
-                    var saveDifficulty = gameDifficulty;
-					initialize();
-					gameDifficulty = saveDifficulty;					
+					initialize();				
  /*               }
             }
 
@@ -625,28 +619,18 @@
     <h2> <span class = "title">Game of Lambdas</span> </h2>
     <div class="leftColumn">
         <img style="opacity:.3;" class="bg" src="images/cool.png" />
-        <b>Controls:</b> Use the arrow keys on your keyboard to move up, down, left, or right. Remember to not crash into yourself!</br>
-        <b>Instructions:</b> Run into lambda blocks to score points and extend your code! Abstraction blocks make your code shorter. Beware of Bug blocks as they will break your code and give you a game over. Running into recursion blocks will get rid of bug blocks and speed up your code! Earn as many points as you can! </br><b>Default mode is HARD</b></br>
+        <b>Controls:</b> Use the arrow keys on your keyboard to move up, down, left, or right. Warning: Do not press any arrow keys before the game starts!</br>
+        <b>Instructions:</b> Run into lambda blocks to score points and extend your code! Abstraction blocks make your code shorter. Beware of Bug blocks as they will break your code and give you a game over. Running into recursion blocks will get rid of bug blocks and speed up your code! Earn as many points as you can! </br><b>Type in "snap" into the player name to play secret mode!</b></br>
         </br>
         <b>Settings</b>
         <hr>
         <form id="settings" method="post" action="snake_game_results.php">
             <b> Player Name</b>
             <input id="nameInput" type="text" name="name" value="Player" />
-            <b>Difficulty:</b>
-            <label>
-                Easy
-                <input type="radio" name="difficulty" value="easy" onclick="setDifficulty('easy');" />
-            </label>
-            </br>
-            <label>
-                Medium
-                <input type="radio" name="difficulty" value="medium" onclick="setDifficulty('medium');" />
-            </label>
-            </br>
-            <label>
-                Hard
-                <input type="radio" name="difficulty" value="hard" checked onclick="setDifficulty('hard');" />
+            <b style="display:none;">Difficulty:</b>
+            <label style="display:none;">
+                Regular
+                <input type="radio" name="difficulty" value="easy" checked onclick="setDifficulty('easy');" />
             </label>
             </br>
             <input id="userScore" type="hidden" name="score" />
